Add Minecraft 26.1.x support