@@ -5,22 +5,25 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Properties;
 
-public class FastCrystalSpinConfig {
-
-    private static final Path CONFIG_PATH = Paths.get("config", "fastcrystalspin.cfg");
+public final class FastCrystalSpinConfig {
+    private static final Path CONFIG_PATH = Path.of("config", "fastcrystalspin.cfg");
     private static final String KEY_MULTIPLIER = "multiplier";
+    private static final float DEFAULT_MULTIPLIER = 2.0F;
+    private static final float MIN_MULTIPLIER = 0.1F;
+    private static final float MAX_MULTIPLIER = 50.0F;
 
-    // default value if config is missing or broken
-    public static float spinSpeedMultiplier = 2.0F;
+    private static float spinSpeedMultiplier = DEFAULT_MULTIPLIER;
+
+    private FastCrystalSpinConfig() {
+    }
 
     public static void load() {
         try {
             if (!Files.exists(CONFIG_PATH)) {
                 saveDefault();
-                System.out.println("[FastCrystalSpin] No config found, created default.");
+                FastCrystalSpinClient.LOGGER.info("No config found, created default config.");
                 return;
             }
 
@@ -29,27 +32,25 @@ public class FastCrystalSpinConfig {
                 props.load(in);
             }
 
-            // Read multiplier, default 2.0
-            String value = props.getProperty(KEY_MULTIPLIER, "2.0");
-            spinSpeedMultiplier = Float.parseFloat(value);
-
-            System.out.println("[FastCrystalSpin] Loaded config. Multiplier = " + spinSpeedMultiplier);
+            String value = props.getProperty(KEY_MULTIPLIER, Float.toString(DEFAULT_MULTIPLIER));
+            setSpinSpeedMultiplier(Float.parseFloat(value));
+            FastCrystalSpinClient.LOGGER.info("Loaded config. Multiplier = {}", spinSpeedMultiplier);
         } catch (IOException | NumberFormatException e) {
-            System.err.println("[FastCrystalSpin] Failed to load config, using default. " + e.getMessage());
-            spinSpeedMultiplier = 2.0F;
+            FastCrystalSpinClient.LOGGER.warn("Failed to load config, using default.", e);
+            spinSpeedMultiplier = DEFAULT_MULTIPLIER;
         }
     }
 
     private static void saveDefault() throws IOException {
         Files.createDirectories(CONFIG_PATH.getParent());
         Properties props = new Properties();
-        props.setProperty(KEY_MULTIPLIER, "2.0");
+        props.setProperty(KEY_MULTIPLIER, Float.toString(DEFAULT_MULTIPLIER));
         try (OutputStream out = Files.newOutputStream(CONFIG_PATH)) {
             props.store(out, "FastCrystalSpin config");
         }
+        spinSpeedMultiplier = DEFAULT_MULTIPLIER;
     }
 
-    // Save the current multiplier back to file
     public static void save() {
         try {
             Files.createDirectories(CONFIG_PATH.getParent());
@@ -58,13 +59,21 @@ public class FastCrystalSpinConfig {
             try (OutputStream out = Files.newOutputStream(CONFIG_PATH)) {
                 props.store(out, "FastCrystalSpin config");
             }
-            System.out.println("[FastCrystalSpin] Saved config. Multiplier = " + spinSpeedMultiplier);
+            FastCrystalSpinClient.LOGGER.info("Saved config. Multiplier = {}", spinSpeedMultiplier);
         } catch (IOException e) {
-            System.err.println("[FastCrystalSpin] Failed to save config: " + e.getMessage());
+            FastCrystalSpinClient.LOGGER.error("Failed to save config.", e);
         }
     }
 
     public static float getSpinSpeedMultiplier() {
         return spinSpeedMultiplier;
+    }
+
+    public static void setSpinSpeedMultiplier(float multiplier) {
+        spinSpeedMultiplier = clamp(multiplier, MIN_MULTIPLIER, MAX_MULTIPLIER);
+    }
+
+    private static float clamp(float value, float min, float max) {
+        return Math.max(min, Math.min(max, value));
     }
 }
